<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".U2_A_A10jesuslb">

    <EditText
        android:id="@+id/txtEdi"
        android:inputType="textWebEditText"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:hint="@string/text_hint"
        />
    <CheckBox
        android:id="@+id/ckBox"
        android:layout_below="@id/txtEdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_clear"
        />

    <Button
        android:id="@+id/btnAdd"
        android:layout_below="@id/ckBox"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button"
        android:onClick="agrega"
        />
    <TextView
        android:id="@+id/txtLabel"
        android:layout_below="@id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/text_label"
        />
    <RadioButton
        android:id="@+id/rtbRed"
        android:layout_below="@id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_red"
        android:checked="true"
        android:onClick="radios"
        />
    <RadioButton
        android:id="@+id/rtbBlue"
        android:layout_below="@id/txtLabel"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_blue"
        android:checked="false"
        android:onClick="radios"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="@color/balck"
        android:layout_below="@id/rtbRed"
        />
    <Spinner
        android:id="@+id/spn"
        android:layout_below="@id/rtbRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/values"
        />
    <View
        android:id="@+id/viewFoto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="@color/balck"
        android:layout_below="@id/spn"
        />
    <ImageView
        android:id="@+id/imaxe"
        android:layout_below="@id/viewFoto"
        android:layout_centerHorizontal="true"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:src="@drawable/torresansadurninho"
        android:onClick="foto"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view"
        android:background="@color/balck"
        android:layout_below="@id/imaxe"
        />
    <Switch
        android:id="@+id/swt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textOn="@string/text_start"
        android:textOff="@string/text_stop"

        />
    <Chronometer
        android:id="@+id/crono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/swt"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
